增加es配置和操作类

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -14,7 +14,7 @@
 </style>
 <head>
     <meta charset="UTF-8">
-    <title>SprinBoot</title>
+    <title>SpringBootTemplate</title>
 </head>
 <body>
 <div class="div"><img src="/img/fozhubaoyou-1.png"></div>
